fix: added the gap between thumbnail and text in CardSelector

--- a/src/components/CardSelector/CardSelector.scss
+++ b/src/components/CardSelector/CardSelector.scss
@@ -3,6 +3,7 @@
 $cardSelector-height: 58px;
 
 .moonstone-cardSelector {
+    gap: var(--spacing-small);
     width: 100%;
     height: $cardSelector-height;
     padding: var(--spacing-nano);
